feat: Вывод самых популярных фильмов по жанру и годам